--- a/.github/workflows/createDebianPackage.yml
+++ b/.github/workflows/createDebianPackage.yml
@@ -24,15 +24,7 @@ jobs:
 
     - name: Build Debian Package
       run: |
-        sudo rm -rf build
-        mkdir -p build
-        cp -r debian_package build/debian
-        cp -r vc-mipi-driver-bcm2712 build/debian
-        mkdir -p build/debian/tmp
-        cp -r src build/
-        cp dkms.conf build/
-        cd build
-        sudo dpkg-buildpackage -us -uc -b
+        docker run --platform linux/arm64 -v ${PWD}:/workspace -w /workspace debian:booksworm dpkg-buildpackage bash .createDebianPackage.sh
     - name: Upload Debian Package
       uses: actions/upload-artifact@v4
       with:
