--- a/.github/workflows/createDebianPackage.yml
+++ b/.github/workflows/createDebianPackage.yml
@@ -23,7 +23,7 @@ jobs:
 
     - name: Build Debian Package
       run: |
-        docker run --platform linux/arm64 -v ${PWD}:/workspace -w /workspace debian:bookworm dpkg-buildpackage bash .createDebianPackage.sh
+        docker run --platform linux/arm64 -v ${PWD}:/workspace -w /workspace debian:bookworm  bash .createDebianPackage.sh
     - name: Upload Debian Package
       uses: actions/upload-artifact@v4
       with:
