--- a/debian_package/rules
+++ b/debian_package/rules
@@ -39,7 +39,7 @@ override_dh_auto_install:
 	chmod 755 $(CURDIR)/debian/tmp/usr/share/vc-mipi-driver-bcm2712-dkms/debian/postinst
 	chmod 755 $(CURDIR)/debian/tmp/usr/share/vc-mipi-driver-bcm2712-dkms/debian/postrm
 
-	cd $(CURDIR)/debian/tmp/usr/src/vc-mipi-driver-bcm2712-0.3.1/ && $(MAKE) all dtbo
+	cd $(CURDIR)/debian/tmp/usr/src/vc-mipi-driver-bcm2712-0.3.1/ && $(MAKE) dtbo
 
 	chmod -R 644 $(CURDIR)/debian/tmp/boot/firmware/overlays/
 	
