--- a/.github/workflows/createDebianPackage.yml
+++ b/.github/workflows/createDebianPackage.yml
@@ -16,10 +16,14 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
+    - name: Build Docker Image
+      run: |
+        docker buildx build --platform linux/arm64 --output type=docker -t vc_raspi:latest .
+
     - name: Build Debian Package
       run: |
-        docker buildx build --platform linux/arm64 -t vc_raspi:latest .
         docker run --platform linux/arm64 -v ${PWD}:/workspace -w /workspace vc_raspi:latest /workspace/createDebianPackage.sh
+
     - name: Upload Debian Package
       uses: actions/upload-artifact@v4
       with:
