--- a/.github/workflows/createDebianPackage.yml
+++ b/.github/workflows/createDebianPackage.yml
@@ -1,7 +1,9 @@
 name: Build Debian Package
 
-on: [push, pull_request]
-
+on:
+  push:
+    tags:
+      - 'v*'
 jobs:
   build:
     runs-on: ubuntu-22.04
@@ -10,22 +12,23 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v3
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
-    - name: Build Docker Image
+    - name: Setup system
       run: |
-        docker buildx build --platform linux/arm64 --output type=docker --load -t vc_raspi:latest .
+        apt-get update && apt-get install --no-install-recommends -y \
+        build-essential \
+        debhelper-compat dh-dkms debhelper linux-headers-generic \
+        device-tree-compiler \
+        dpkg-dev \
+        sudo \
+        && rm -rf /var/lib/apt/lists/*
+
 
     - name: Build Debian Package
       run: |
-        docker run --platform linux/arm64 -v ${PWD}:/workspace -w /workspace vc_raspi:latest /workspace/createDebianPackage.sh
-
+        export VERSION=${GITHUB_REF#refs/tags/}
+        bash ./createDebianPackage.sh
     - name: Upload Debian Package
       uses: actions/upload-artifact@v4
       with:
         name: debian-package
-        path: build/*.deb
+        path: ./*.deb
