--- a/debian_package/rules
+++ b/debian_package/rules
@@ -10,19 +10,19 @@ override_dh_auto_build:
 
 override_dh_auto_install:
 	# Install to tmp directory with verbose output
-	mkdir -p $(CURDIR)/debian/tmp/usr/src/vc-mipi-driver-bcm2712-0.3.1/
+	mkdir -p $(CURDIR)/debian/tmp/usr/src/vc-mipi-driver-bcm2712-${VERSION}/
 	mkdir -p $(CURDIR)/debian/tmp/usr/share/vc-mipi-driver-bcm2712-dkms/overlays/
 	mkdir -p $(CURDIR)/debian/tmp/etc/udev/rules.d/
 	mkdir -p $(CURDIR)/debian/tmp/usr/local/bin/
 	mkdir -p $(CURDIR)/debian/tmp/boot/firmware/overlays/
 	mkdir -p $(CURDIR)/debian/tmp/usr/share/vc-mipi-driver-bcm2712-dkms/debian/ 
 
-	cp -v dkms.conf $(CURDIR)/debian/tmp/usr/src/vc-mipi-driver-bcm2712-0.3.1/
-	cp -rv src/. $(CURDIR)/debian/tmp/usr/src/vc-mipi-driver-bcm2712-0.3.1/
+	cp -v dkms.conf $(CURDIR)/debian/tmp/usr/src/vc-mipi-driver-bcm2712-${VERSION}/
+	cp -rv src/. $(CURDIR)/debian/tmp/usr/src/vc-mipi-driver-bcm2712-${VERSION}/
 	cp src/set_rpi5_pipeline.sh $(CURDIR)/debian/tmp/usr/local/bin/
 	chmod 755 $(CURDIR)/debian/tmp/usr/local/bin/set_rpi5_pipeline.sh
-	rm -f $(CURDIR)/debian/tmp/usr/src/vc-mipi-driver-bcm2712-0.3.1/set_rpi5_pipeline.sh
-	rm -f $(CURDIR)/debian/tmp/usr/src/vc-mipi-driver-bcm2712-0.3.1/99-camera-setup.rules
+	rm -f $(CURDIR)/debian/tmp/usr/src/vc-mipi-driver-bcm2712-${VERSION}/set_rpi5_pipeline.sh
+	rm -f $(CURDIR)/debian/tmp/usr/src/vc-mipi-driver-bcm2712-${VERSION}/99-camera-setup.rules
 	cp src/99-camera-setup.rules $(CURDIR)/debian/tmp/etc/udev/rules.d/
 	chmod 755 $(CURDIR)/debian/tmp/etc/udev/rules.d/99-camera-setup.rules
 	chmod 644 src/overlays/config_vc-mipi-driver-bcm2712-raspi5.txt
@@ -39,7 +39,7 @@ override_dh_auto_install:
 	chmod 755 $(CURDIR)/debian/tmp/usr/share/vc-mipi-driver-bcm2712-dkms/debian/postinst
 	chmod 755 $(CURDIR)/debian/tmp/usr/share/vc-mipi-driver-bcm2712-dkms/debian/postrm
 
-	cd $(CURDIR)/debian/tmp/usr/src/vc-mipi-driver-bcm2712-0.3.1/ && $(MAKE) dtbo
+	cd $(CURDIR)/debian/tmp/usr/src/vc-mipi-driver-bcm2712-${VERSION}/ && $(MAKE) dtbo
 
 	chmod -R 644 $(CURDIR)/debian/tmp/boot/firmware/overlays/
 	
