--- a/.github/workflows/createDebianPackage.yml
+++ b/.github/workflows/createDebianPackage.yml
@@ -16,7 +16,7 @@ jobs:
       run: |
         sudo apt-get update && sudo apt-get install --no-install-recommends -y \
         build-essential \
-        debhelper-compat dh-dkms debhelper linux-headers-generic \
+        debhelper-compat dkms debhelper linux-headers-generic \
         device-tree-compiler \
         dpkg-dev \
         && sudo rm -rf /var/lib/apt/lists/*
