Update worker to 24.04

--- a/.github/workflows/createDebianPackage.yml
+++ b/.github/workflows/createDebianPackage.yml
@@ -6,7 +6,7 @@ on:
       - 'v*'
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
 
     steps:
     - name: Checkout repository
@@ -16,7 +16,7 @@ jobs:
       run: |
         sudo apt-get update && sudo apt-get install --no-install-recommends -y \
         build-essential \
-        debhelper-compat dkms debhelper linux-headers-generic \
+        debhelper-compat dh-dkms dkms debhelper linux-headers-generic \
         device-tree-compiler \
         dpkg-dev \
         && sudo rm -rf /var/lib/apt/lists/*
