--- a/debian_package/rules
+++ b/debian_package/rules
@@ -9,20 +9,25 @@ override_dh_auto_build:
 	cd src && $(MAKE) dtbo
 
 override_dh_auto_install:
+	echo "DEBUG: NAME is vc-mipi-driver-bcm2712"
+	# Divert the files to prevent dpkg from making backup links
+	dpkg-divert --local --rename --add /boot/firmware/config_vc-mipi-driver-bcm2712-raspi5.txt
+	dpkg-divert --local --rename --add /boot/firmware/config_vc-mipi-driver-bcm2712.txt
+
 	# Install to tmp directory with verbose output
-	mkdir -p $(CURDIR)/debian/tmp/usr/src/vc-mipi-driver-bcm2712-${VERSION}/
+	mkdir -p $(CURDIR)/debian/tmp/usr/src/vc-mipi-driver-bcm2712-${VERSION_DEB_PACKAGE}/
 	mkdir -p $(CURDIR)/debian/tmp/usr/share/vc-mipi-driver-bcm2712-dkms/overlays/
 	mkdir -p $(CURDIR)/debian/tmp/etc/udev/rules.d/
 	mkdir -p $(CURDIR)/debian/tmp/usr/local/bin/
 	mkdir -p $(CURDIR)/debian/tmp/boot/firmware/overlays/
 	mkdir -p $(CURDIR)/debian/tmp/usr/share/vc-mipi-driver-bcm2712-dkms/debian/ 
 
-	cp -v dkms.conf $(CURDIR)/debian/tmp/usr/src/vc-mipi-driver-bcm2712-${VERSION}/
-	cp -rv src/. $(CURDIR)/debian/tmp/usr/src/vc-mipi-driver-bcm2712-${VERSION}/
+	cp -v dkms.conf $(CURDIR)/debian/tmp/usr/src/vc-mipi-driver-bcm2712-${VERSION_DEB_PACKAGE}/
+	cp -rv src/. $(CURDIR)/debian/tmp/usr/src/vc-mipi-driver-bcm2712-${VERSION_DEB_PACKAGE}/
 	cp src/set_rpi5_pipeline.sh $(CURDIR)/debian/tmp/usr/local/bin/
 	chmod 755 $(CURDIR)/debian/tmp/usr/local/bin/set_rpi5_pipeline.sh
-	rm -f $(CURDIR)/debian/tmp/usr/src/vc-mipi-driver-bcm2712-${VERSION}/set_rpi5_pipeline.sh
-	rm -f $(CURDIR)/debian/tmp/usr/src/vc-mipi-driver-bcm2712-${VERSION}/99-camera-setup.rules
+	rm -f $(CURDIR)/debian/tmp/usr/src/vc-mipi-driver-bcm2712-${VERSION_DEB_PACKAGE}/set_rpi5_pipeline.sh
+	rm -f $(CURDIR)/debian/tmp/usr/src/vc-mipi-driver-bcm2712-${VERSION_DEB_PACKAGE}/99-camera-setup.rules
 	cp src/99-camera-setup.rules $(CURDIR)/debian/tmp/etc/udev/rules.d/
 	chmod 755 $(CURDIR)/debian/tmp/etc/udev/rules.d/99-camera-setup.rules
 	chmod 644 src/overlays/config_vc-mipi-driver-bcm2712-raspi5.txt
@@ -30,7 +35,8 @@ override_dh_auto_install:
 
 	cp src/overlays/config_vc-mipi-driver-bcm2712-raspi5.txt $(CURDIR)/debian/tmp/boot/firmware/
 	cp src/overlays/config_vc-mipi-driver-bcm2712.txt $(CURDIR)/debian/tmp/boot/firmware/
-
+	chmod 644 $(CURDIR)/debian/tmp/boot/firmware/config_vc-mipi-driver-bcm2712-raspi5.txt
+	chmod 644 $(CURDIR)/debian/tmp/boot/firmware/config_vc-mipi-driver-bcm2712.txt
 	cp src/vc-config $(CURDIR)/debian/tmp/usr/local/bin/
 	chmod 755 $(CURDIR)/debian/tmp/usr/local/bin/vc-config
 
@@ -39,18 +45,22 @@ override_dh_auto_install:
 	chmod 755 $(CURDIR)/debian/tmp/usr/share/vc-mipi-driver-bcm2712-dkms/debian/postinst
 	chmod 755 $(CURDIR)/debian/tmp/usr/share/vc-mipi-driver-bcm2712-dkms/debian/postrm
 
-	cd $(CURDIR)/debian/tmp/usr/src/vc-mipi-driver-bcm2712-${VERSION}/ && $(MAKE) dtbo
+	cd $(CURDIR)/debian/tmp/usr/src/vc-mipi-driver-bcm2712-${VERSION_DEB_PACKAGE}/ && $(MAKE) dtbo
 
 	chmod -R 644 $(CURDIR)/debian/tmp/boot/firmware/overlays/
 	
 	# Ensure the file is copied before running dh_install
-	dh_install --sourcedir=$(CURDIR)/debian/tmp --verbose
+	dh_install --sourcedir=$(CURDIR)/debian/tmp --verbose 
+
+	# Undivert the files after installation
+	dpkg-divert --local --rename --remove /boot/firmware/config_vc-mipi-driver-bcm2712-raspi5.txt
+	dpkg-divert --local --rename --remove /boot/firmware/config_vc-mipi-driver-bcm2712.txt
 
 override_dh_missing:
 	dh_missing --fail-missing
 
 override_dh_install:
-	dh_install --sourcedir=debian/tmp --verbose
+	dh_install --sourcedir=debian/tmp --verbose 
 
 override_dh_usrlocal:
     # Empty override to prevent dh_usrlocal from running
