--- a/dkms.conf
+++ b/dkms.conf
@@ -1,5 +1,5 @@
 PACKAGE_NAME="vc-mipi-driver-bcm2712"
-PACKAGE_VERSION="${VERSION}"
+PACKAGE_VERSION="${VERSION_DEB_PACKAGE}"
 BUILD_EXCLUSIVE_KERNEL="(^5.4|^5.10|^5.15|^6.1|^6.6)([^v].*)"
 
 MAKE[0]="make KERNEL_VER=$kernelver build"
