--- a/src/overlays/vc-mipi-bcm2712-cam0-overlay.dts
+++ b/src/overlays/vc-mipi-bcm2712-cam0-overlay.dts
@@ -33,6 +33,7 @@
 			#address-cells = <1>;
 			#size-cells = <0>;
 			status = "okay";
+			brcm,media-controller;
 
 			vc_mipi_cam1: camera@1a {
 				compatible = "vc,vc_mipi_camera";
@@ -42,6 +43,8 @@
 				
 				port {
 					vc_mipi_cam1_ep: endpoint {
+						clock-noncontinuous;
+						clock-lanes = <0x00>;
 						remote-endpoint = <&csi2_ep>;
 						data-lanes = <1 2 3 4>;
 
@@ -50,8 +53,20 @@
 			};
 		};
 	};
+	fragment@2 {
+		target = <&i2c0mux>;
+		__overlay__ {
+			status = "okay";
 
+		};
+	};
+	fragment@3 {
+		target = <&i2c0if>;
+		__overlay__ {
+			status = "okay";
 
+		};
+	};
 	fragment@1001 {
 		target = <&i2c_csi_dsi0>;
 		__dormant__ {
@@ -95,6 +110,7 @@
 		target = <&csi0>;
 		__dormant__ {
 			status = "okay";
+            brcm,num-data-lanes = <0x01>;
 			port {
 				endpoint {
 					data-lanes = <1>;
@@ -107,6 +123,8 @@
 		target = <&csi0>;
 		__dormant__ {
 			status = "okay";
+            brcm,num-data-lanes = <0x02>;
+
 			port {
 				endpoint {
 					data-lanes = <1 2>;
@@ -119,6 +137,7 @@
 		target = <&csi0>;
 		__dormant__ {
 			status = "okay";
+            brcm,num-data-lanes = <0x04>;
 			port {
 				endpoint {
 					data-lanes = <1 2 3 4>;
@@ -128,9 +147,10 @@
 		};
 	};
 	__overrides__ {
-        lanes1 =       <0>,"+1=1001=2001";
-		lanes2 =       <0>,"+1=1002=2002";
-		lanes4 =       <0>,"+1=1004=2004";
+        lanes1 =       <0>,"+1+2+3=1001=2001";
+		lanes2 =       <0>,"+1+2+3=1002=2002";
+		lanes4 =       <0>,"+1+2+3=1004=2004";
+		lanes0 = 	   <0>,"";
 
     };
 };
