Update device tree configuration

--- a/src/overlays/vc-mipi-bcm2712-cam1-overlay.dts
+++ b/src/overlays/vc-mipi-bcm2712-cam1-overlay.dts
@@ -1,5 +1,5 @@
 //
-// Definitions for cam 0 for RaspberryPi 5
+// Definitions for cam 1 for RaspberryPi 5
 //
 // Copyright (C) 2024 - Florian Schmid, Vision Components GmbH
 //
@@ -10,37 +10,43 @@
 /dts-v1/;
 /plugin/;
 
-/ {    
-	fragment@0 {
-		target = <&csi1>;
+/ {
+    fragment@0 {
+     
+		target = <&csi0>;
 		__overlay__ {
 			status = "okay";
 
 			port {
-				csi1_ep: endpoint {
-					remote-endpoint = <&vc_mipi_cam0_ep>;
-					data-lanes = <1>;
+				csi2_ep: endpoint {
+					remote-endpoint = <&vc_mipi_cam1_ep>;
+					data-lanes = <1 2 3 4>;
+
 				};
 			};
 		};
-	};	
+	};
 	fragment@1 {
-		target = <&i2c_csi_dsi>;
+		target = <&i2c_csi_dsi0>;
+		status = "okay";
 		__overlay__ {
 			#address-cells = <1>;
 			#size-cells = <0>;
 			status = "okay";
+			brcm,media-controller;
 
-			vc_mipi_cam0: camera@1a {
+			vc_mipi_cam1: camera1{				
 				compatible = "vc,vc_mipi_camera";
 				reg = <0x1a>;
 				status = "okay";
 
 				
 				port {
-					vc_mipi_cam0_ep: endpoint {
-						remote-endpoint = <&csi1_ep>;
-						data-lanes = <1>;
+					vc_mipi_cam1_ep: endpoint {
+						clock-noncontinuous;
+						clock-lanes = <0x00>;
+						remote-endpoint = <&csi2_ep>;
+						data-lanes = <1 2 3 4>;
 
 					};
 				};
@@ -62,9 +68,9 @@
 		};
 	};
 	fragment@1001 {
-		target = <&i2c_csi_dsi>;
+		target = <&i2c_csi_dsi0>;
 		__dormant__ {
-			camera@1a {
+			camera1 {
 				port {
 						endpoint {
 							data-lanes = <1>;
@@ -75,9 +81,9 @@
 		};
 	};
 	fragment@1002 {
-		target = <&i2c_csi_dsi>;
+		target = <&i2c_csi_dsi0>;
 		__dormant__ {
-			camera@1a {
+			camera1 {
 				port {
 						endpoint {
 							data-lanes = <1 2>;
@@ -88,9 +94,9 @@
 		};
 	};
 	fragment@1004 {
-		target = <&i2c_csi_dsi>;
+		target = <&i2c_csi_dsi0>;
 		__dormant__ {
-			camera@1a {
+			camera1 {
 				port {
 						endpoint {
 							data-lanes = <1 2 3 4>;
@@ -101,9 +107,10 @@
 		};
 	};
 	fragment@2001 {
-		target = <&csi1>;
+		target = <&csi0>;
 		__dormant__ {
 			status = "okay";
+            brcm,num-data-lanes = <0x01>;
 			port {
 				endpoint {
 					data-lanes = <1>;
@@ -113,9 +120,11 @@
 		};
 	};
 	fragment@2002 {
-		target = <&csi1>;
+		target = <&csi0>;
 		__dormant__ {
 			status = "okay";
+            brcm,num-data-lanes = <0x02>;
+
 			port {
 				endpoint {
 					data-lanes = <1 2>;
@@ -125,9 +134,10 @@
 		};
 	};
 	fragment@2004 {
-		target = <&csi1>;
+		target = <&csi0>;
 		__dormant__ {
 			status = "okay";
+            brcm,num-data-lanes = <0x04>;
 			port {
 				endpoint {
 					data-lanes = <1 2 3 4>;
@@ -136,11 +146,14 @@
 			};
 		};
 	};
+
 	__overrides__ {
-        lanes1 =       <0>,"+1+2+3=1001=2001";
-		lanes2 =       <0>,"+1+2+3=1002=2002";
-		lanes4 =       <0>,"+1+2+3=1004=2004";		
-		lanes0 = 	   <0>,"";
+        cam1_lanes1 	=      <0>,"+1+2+3=1001=2001";
+		cam1_lanes2 	=      <0>,"+1+2+3=1002=2002";
+		cam1_lanes4 	=      <0>,"+1+2+3=1004=2004";		
+		cam1_lanes0 	= 	   <0>,"";
+		cam1_manu_ov	=      <&vc_mipi_cam1>,"reg:0=",<0x60>;
+
 
     };
 };
